Class name fixes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <h4 class="card-header bg-dark text-light">
             To Do
           </h4>
-          <ul id="list-toDo" class="list-group"></ul>
+          <ul id="list-toDo" class="list-group list-group-flush"></ul>
         </div>
       </div>
         <!-- todo end -->
@@ -51,7 +51,7 @@
           <h4 class="card-header bg-dark text-light">
             In Progress
           </h4>
-          <ul id="list-inProgress" class="list-group">
+          <ul id="list-inProgress" class="list-group list-group-flush">
             </ul>
         </div>
         </div>
@@ -62,7 +62,7 @@
           <h4 class="card-header bg-dark text-light">
             In Review
           </h4>
-          <ul id="list-inReview" class="list-group">
+          <ul id="list-inReview" class="list-group list-group-flush">
           </ul>
         </div>
        </div>
@@ -74,7 +74,7 @@
           <h4 class="card-header bg-dark text-light">
             Done
           </h4>
-          <ul id="list-done" class="list-group">
+          <ul id="list-done" class="list-group list-group-flush>
            </ul>
         </div>
         </div>
