updated classes, typos fixed

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <h4 class="card-header bg-dark text-light">
             Done
           </h4>
-          <ul id="list-done" class="list-group list-group-flush>
+          <ul id="list-done" class="list-group list-group-flush">
            </ul>
         </div>
         </div>
